--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "express": "~4.16.1",
     "express-basic-auth": "^1.2.0",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "pug": "^2.0.4",
     "morgan": "~1.9.1"
   }
 }
